pipeline vedic & karatsuba, with vedic+barrett and karatsuba+barrett implementation

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 
 /.vs/ProjectSettings.json
 /.vs/slnx.sqlite
+/.vs/mult_64bit_vedic/v17
+/.vs/mult_64bit_vedic/project-colors.json
+/.vs/VSWorkspaceState.json
